--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "printWidth": 80,
   "useTabs": false,
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "trailingComma": "all",
   "arrowParens": "avoid",
   "plugins": ["prettier-plugin-tailwindcss"]
