--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
     "tailwindcss": "^3.1.3",
+    "tinro": "^0.6.12",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
